objects/Shared_Files_Setting__mdt.object
<CustomObject><fields>
        <fullName>Automatically_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, attachments will be automatically shared and a link will be stored in the Shared_File__c record</description>
        <inlineHelpText>If selected, attachments will be automatically shared and a link will be stored in the Shared_File__c record</inlineHelpText>
        <label>Automatically Share</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the Object which attachments will be externally shared</description>
        <inlineHelpText>Name of the Object which attachments will be externally shared</inlineHelpText>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Used_For_Testing_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Selected, this setting will only share items for unit tests</description>
        <inlineHelpText>If Selected, this setting will only share items for unit tests</inlineHelpText>
        <label>Used For Testing Only</label>
        <type>Checkbox</type>
    </fields><description>Used to determine what files need to be shared externally</description><label>Shared Files Setting</label><pluralLabel>Shared Files Setting</pluralLabel><visibility>Public</visibility></CustomObject>